feat(admin): add payment methods management routes and controller
- Implemented routes for managing payment methods including listing, creating, updating, and deleting methods.
- Created AdminPaymentsController to handle payment statistics and transaction retrieval.
- Added AdminPaymentsService for business logic related to payment transactions and statistics.
- Introduced validation for payment method creation and updates using express-validator.
- Integrated Swagger documentation for new endpoints.

feat(payments): implement user-facing payment methods retrieval

- Developed PaymentMethodsController to fetch available payment methods based on filters.
- Added service methods for retrieving payment method details and available methods.
- Created routes for accessing payment methods in the user-facing API.
- Enhanced error handling and logging for payment method operations.

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prisma:seed:badges": "ts-node prisma/seeds/core/badges.seed.ts",
     "prisma:seed:new-badges": "ts-node prisma/seeds/new-badges-standalone.seed.ts",
     "prisma:seed:rewards": "ts-node prisma/seeds/core/rewards.seed.ts",
+    "seed:rewards:prod": "ts-node scripts/seed-rewards-prod.ts",
     "prisma:seed:users": "ts-node prisma/seeds/core/users.seed.ts",
     "prisma:seed:communities": "ts-node prisma/seeds/core/communities.seed.ts",
     "prisma:seed:events": "ts-node prisma/seeds/core/events.seed.ts",
