--- a/package.json
+++ b/package.json
@@ -56,13 +56,29 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.913.0",
     "@aws-sdk/s3-request-presigner": "^3.913.0",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^6.19.0",
     "@sendgrid/mail": "^8.1.6",
     "@types/bcrypt": "^6.0.0",
+    "@types/compression": "^1.8.1",
     "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
     "@types/csurf": "^1.11.5",
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/morgan": "^1.9.10",
+    "@types/multer": "^1.4.13",
+    "@types/node": "^24.0.3",
+    "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^6.4.14",
+    "@types/qrcode": "^1.5.5",
     "@types/redis": "^4.0.10",
+    "@types/socket.io": "^3.0.2",
+    "@types/speakeasy": "^2.0.7",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "@types/uuid": "^10.0.0",
+    "@types/web-push": "^3.6.4",
     "@types/winston": "^2.4.4",
     "@yusifaliyevpro/countries": "^2.2.2",
     "axios": "^1.11.0",
@@ -70,11 +86,13 @@
     "bcryptjs": "^3.0.2",
     "compression": "^1.8.0",
     "cookie-parser": "^1.4.7",
+    "copyfiles": "^2.4.1",
     "cors": "^2.8.5",
     "country-state-city": "^3.2.1",
     "cross-env": "^10.0.0",
     "csurf": "^1.11.0",
     "dotenv": "^16.5.0",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
     "express-validator": "^7.2.1",
@@ -94,32 +112,15 @@
     "speakeasy": "^2.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "ts-node": "^10.9.2",
     "twilio": "^4.19.3",
+    "typescript": "^5.8.3",
     "uuid": "^9.0.1",
     "web-push": "^3.6.7",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
     "xendit-node": "^7.0.0",
-    "zod": "^4.0.14",
-    "@paralleldrive/cuid2": "^2.2.2",
-    "@types/compression": "^1.8.1",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/morgan": "^1.9.10",
-    "@types/multer": "^1.4.13",
-    "@types/node": "^24.0.3",
-    "@types/node-cron": "^3.0.11",
-    "@types/nodemailer": "^6.4.14",
-    "@types/qrcode": "^1.5.5",
-    "@types/socket.io": "^3.0.2",
-    "@types/speakeasy": "^2.0.7",
-    "@types/swagger-jsdoc": "^6.0.4",
-    "@types/swagger-ui-express": "^4.1.8",
-    "@types/web-push": "^3.6.4",
-    "copyfiles": "^2.4.1",
-    "typescript": "^5.8.3",
-    "ts-node": "^10.9.2"
+    "zod": "^4.0.14"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.9.0",
