--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
     "xendit-node": "^7.0.0",
+    "xlsx": "^0.18.5",
     "zod": "^4.0.14"
   },
   "devDependencies": {
